More robust handling of external files for theories
The external files may be URLs, not just files (eg: JAR resources).